# aos_meta_tool_adapter

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: canonical_output_payload.example.json  external_payload.example.json  toolchain_runtime_config.example.json
src/aos_meta_tool_adapter/: __init__.py  api.py  cli.py  reference.py
src/aos_meta_tool_adapter/contracts/: models.py
src/aos_meta_tool_adapter/envelope/: __init__.py  canonical.py  mappings.py  validator.py
src/aos_meta_tool_adapter/integrations/: __init__.py
src/aos_meta_tool_adapter/registry/: loader.py  manifest.py  registry.py  resolver.py  writer.py
src/aos_meta_tool_adapter/resources/: __init__.py
src/aos_meta_tool_adapter/resources/jsonl/master/: aos.app_tool.contract_pack_master.v1.jsonl  aos.app_tool.generation_master.v1.jsonl  aos.app_tool.upload_friendly_bundle.v1.jsonl
src/aos_meta_tool_adapter/resources/jsonl/split/: aos.app_tool.adapter_surface.v1.jsonl  aos.app_tool.archive_plan.v1.jsonl  aos.app_tool.artifact_manifest.v1.jsonl  aos.app_tool.capability_surface.v1.jsonl  aos.app_tool.checkpoint_artifact.v1.jsonl  aos.app_tool.compatibility_surface.v1.jsonl  aos.app_tool.deployment_surface.v1.jsonl  aos.app_tool.determinism_surface.v1.jsonl  (+31 more)
src/aos_meta_tool_adapter/resources/reference/: README.md  app_tool_schema_inventory.v1.jsonl  factory_request.schema.json  pack_jsonl_manifest.json  schema_record.schema.json
src/aos_meta_tool_adapter/resources/registry/: tool_registry.jsonl
src/aos_meta_tool_adapter/runtime/: binder.py  executor.py  licensing.py  normalizer.py  receipts.py  validator.py
src/aos_meta_tool_adapter/utils/: json.py  jsonl.py
tests/: test_smoke.py
